tests/errors/preprocessor/after_functionid_must_be_comma.c
#define ABC(a b) (a - b)

int main()
{
	return 0;
}
